# jari

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.tracking/: Aras14HD  Mikolaj Bajtkiewicz  Niklas (manuell)  Samir  pre-commit  record.sh
nix/: default.nix  module.nix
planning/: README.md  structure.md
resources/: edit.html  login.html  radio.html  settings.html  start.html
resources/css/: background.css  edit.css  index.css  login.css  radio.css  settings.css  start.css  sttings.css
resources/js/: edit.js  login.js  radio.js  radioplayer.js  search.js  settings.js  start.js
src/: auth.rs  blocking.rs  cli.rs  errors.rs  handlers.rs  hls.rs  main.rs  silence.aac
tracking/: Aras14HD  Mikolaj Bajtkiewicz  commit-msg  record.sh
