[package]
name = "jari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "=0.13.3"
actix-web = { version = "=4.5.1", features = ["rustls"] }
actix-files = "0.6.6"
clap = {version = "=4.4.18", features = ["derive"]}
derive_more = "0.99.17"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "=1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
