[package]
name = "jari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
clap = {version = "4.4.18", features = ["derive"]}
derive_more = "0.99.17"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
id3 = { version = "1.13.1", features = ["tokio"] }
byteorder = "1.5.0"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
rayon = "1.10.0"
itertools = "0.13.0"
fdk-aac = "0.6.0"
rustls = "0.23"
rustls-pemfile = "2"
ammonia = "4.0.0"
postcard = { version = "1.0.10", features = ["use-std"] }
openidconnect = "3.5.0"
serde_json = "1.0.128"
dotenvy = "0.15.7"
